--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -1,6 +1,6 @@
 {{ if eq .chezmoi.osRelease.name "Arch Linux" -}}
 #!/bin/bash
 echo "Installing packages required for dotfiles"
-sudo pacman -S nvim htop ripgrep tmux
+sudo pacman -S nvim htop ripgrep tmux dunst
 {{ end -}}
 
