Add scrot to installs

--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -1,7 +1,7 @@
 {{ if eq .chezmoi.osRelease.name "Arch Linux" -}}
 #!/bin/bash
 echo "Installing packages required for dotfiles"
-sudo pacman --needed -S nvim htop ripgrep tmux dunst dmenu git keychain
+sudo pacman --needed -S nvim htop ripgrep tmux dunst dmenu git keychain scrot
 
 # ST Installation
 echo "Installing st"
