Fix pacman nodejs typo in install packages

--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -3,7 +3,7 @@
 echo "Installing packages required for dotfiles"
 sudo pacman --needed -S nvim htop tmux dunst dmenu keychain scrot
 # nvim plugin dependencies
-sudo pacman --needed -S ripgrep git curl unzip gzip tar node
+sudo pacman --needed -S ripgrep git curl unzip gzip tar nodejs
 # ST Installation
 echo "Installing st"
 stLocation="$HOME/sc/st"
