Add slstatus, slock to installation

--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -32,6 +32,8 @@ function sucklessInstaller {
 
 sucklessInstaller "st"
 sucklessInstaller "dwm"
+sucklessInstaller "slstatus"
+sucklessInstaller "slock"
 
 exit 0
 {{ end -}}
